=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 3.12 - In development

=over

=item *

Fix bug in F<krang_ctl> that incorrectly used C<sudo> when
starting/stopping the scheduler. [Michael Peters]

=item *

Prevent media files from getting spaces (or other forbidden characters)
in their filenames when bulk-uploaded or added via FTP (already forbidden
in the web UI). [Michael Peters]

=item *

Updated accidental limit where publisher couldn't handle story_ids over
4194304. [Mike Lampson & Michael Peters]

=item *

Don't delete temporary expanded XML files when a KDS import fails so it
can be inspected. [Michael Peters]

=item *

Fix problem of starting Apache still being attached to the IO of the starting
terminal making it hang SSH sessions. [Michael Peters]

=item *

Fix bug of F<krang_ftpd> where the new FTP daemon wasn't always detaching
itself from the terminal process that started it, thus hanging SSH
sessions when trying to disconnect.

=item *

Fixed bug in IE where people randomly lose their session if they are doing
a lot of publishing and previewing. [Michael Peters]

=item *

Hitting "Save & Stay" on the "Edit Template" screen now doesn't reset the
template editor, so you don't lose your place. [Michael Peters]

=item *

Bulk Upload of Media can now handle resizing images with .jpg and .jpeg
extensions in addition to .png, .gif, and .tiff files.  [Brad Oaks]

=back

=head2 3.11 - August 30, 2010

=over

=item * 

Added C<DBIgnoreVersion> configuration directive to allow for times when
you're upgrading multiple Krang machines at the same time while others
are running. [Michael Peters]

=item *

Pager page numbers and count are now formatted numbers [Michael Peters]

=item *

Status page now uses the C<Charset> directive like the rest of Krang. [Michael Peters]

=item *

Improved performance of ISE notification by running the code under mod_perl
and not CGI. [Michael Peters]

=item * 
